# MCP-lab

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  mcplab  pyproject.toml
.github/workflows/: ci.yml
docs/: conformance-report.md  context-cost-analysis.md  glossary.md  spec-gaps.md  threat-model.md  transport-comparison.md
fixtures/payloads/requests/: malformed_jsonrpc.json  out_of_order.json  rapid_fire.json  valid_lifecycle.json
fixtures/payloads/responses/: oversized_results.json  poisoned_results.json  wrong_content_type.json
fixtures/schemas/adversarial/: extra_fields.json  injection_in_description.json  injection_in_param_description.json  overlong_description.json  unicode_steganography.json
fixtures/schemas/malformed/: circular_ref.json  empty_schema.json  invalid_type.json  missing_type.json
fixtures/schemas/valid/: all_types.json  complex_nested.json  minimal.json  realistic.json
fixtures/servers/: adversarial_injector.json  adversarial_shadower.json  context_bomber.json  honest.json  protocol_violator.json  slow_unreliable.json
harness/: __init__.py  async_client.py  cli.py  config.py  http_server.py  interceptor.py  logging_config.py  mock_client.py  mock_server.py  multi_client.py  repl.py  repl_commands.py  reporter.py  tokenizer.py
scripts/: benchmark.sh  generate_report.py  profile_server.py  record_traffic.sh  run_all.sh  run_security.sh
tests/: __init__.py  conftest.py
tests/conformance/: __init__.py  test_protocol.py
tests/evaluation/: __init__.py  test_context_cost.py
tests/fuzzing/: test_fuzz_protocol.py
tests/integration/: __init__.py  test_auth_delegation.py  test_multi_server.py  test_state_and_sessions.py
tests/security/: __init__.py  test_trust_boundaries.py
tests/transport/: __init__.py  test_http.py  test_latency.py
