[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-lab"
version = "0.1.0"
description = "Testing and research harness for the Model Context Protocol (MCP)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.0",
]

[project.optional-dependencies]
http = ["aiohttp>=3.9", "pytest-asyncio>=1.0", "pytest-aiohttp>=1.0"]
fuzz = ["hypothesis>=6.0"]
tokens = ["tiktoken>=0.7"]
all = ["aiohttp>=3.9", "pytest-asyncio>=1.0", "pytest-aiohttp>=1.0", "hypothesis>=6.0", "tiktoken>=0.7"]

[tool.setuptools.packages.find]
include = ["harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    # Category markers (auto-applied by tests/conftest.py based on test path)
    "conformance: JSON-RPC / MCP spec compliance tests",
    "security: trust-boundary, auth, and credential-leak tests",
    "fuzz: property-based / mutation fuzz tests",
    "integration: multi-server, session, and cross-component tests",
    "transport: stdio and HTTP transport tests",
    "evaluation: context-cost and schema-evaluation tests",
    # Speed markers
    "slow: tests that take >1s (deselect with '-m \"not slow\"')",
    # Dependency markers (useful for selecting subsets when extras are missing)
    "requires_http: needs the [http] extra (aiohttp, pytest-asyncio)",
    "requires_hypothesis: needs the [fuzz] extra (hypothesis)",
]
